--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -5,8 +5,31 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="UploadFragment">
-    <TextView
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="uploadFragment"/>
+        android:layout_height="wrap_content"
+        android:background="@color/navi_color"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark"/>
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tablayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/navi_color"
+        app:tabSelectedTextColor="@color/colorWhite"
+        app:tabTextColor="@color/colorBlack">
+
+        <android.support.design.widget.TabItem
+            android:id="@+id/tabNew"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="新しい競技"/>
+        <android.support.design.widget.TabItem
+            android:id="@+id/tabOld"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="既存の競技"/>
+    </android.support.design.widget.TabLayout>
 </FrameLayout>
