--- a/app/src/main/res/layout/fragment_new_compe.xml
+++ b/app/src/main/res/layout/fragment_new_compe.xml
@@ -11,10 +11,10 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/camStartButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:text="カメラ起動" />
 
         <Button
             android:id="@+id/button2"
