--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -9,4 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="uploadFragment"/>
-</FrameLayout>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+0</FrameLayout>
