--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -24,6 +24,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/record" />
+        <Button
+            android:id="@+id/goPreview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="プレビュー" />
 
     </FrameLayout>
 
