暫定的なvideoのプレビュー機能追加 RECORD後プレビューボタンを押すとプレビュー画面に遷移 VideoViewをクリックすると最初から再生される Backボタンか端末のBackボタンでカメラ画面に戻る

--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!--カメラうつすとこ-->
     <com.example.greentea.fteam.AutoFitTextureView
         android:id="@+id/texture"
         android:layout_width="wrap_content"
