--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,13 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".HomeFragment">
+
+    <View
+        android:id="@+id/dragsuruView"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@color/colorBlack"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
