--- a/app/src/main/res/layout/fragment_video_preview.xml
+++ b/app/src/main/res/layout/fragment_video_preview.xml
@@ -6,20 +6,18 @@
     tools:context=".VideoPreviewFragment">
 
 
-    <!--<TextView-->
-        <!--android:id="@+id/textView"-->
+
+    <!--<VideoView-->
+        <!--android:id="@+id/videoPreviewView"-->
         <!--android:layout_width="wrap_content"-->
         <!--android:layout_height="wrap_content"-->
-        <!--android:text="TextView" />-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_alignParentTop="true" />-->
 
-    <VideoView
+    <SurfaceView
         android:id="@+id/videoPreviewView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp" />
+        android:layout_height="wrap_content" />
 
     <FrameLayout
         android:layout_width="match_parent"
