--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,47 +7,97 @@
     tools:context=".MainActivity">
 
     <!--<android.support.v7.widget.Toolbar android:id="@+id/toolbar"-->
-        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
-        <!--app:titleTextColor="@color/bottom_navi_textColor"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="?android:attr/actionBarSize"-->
-        <!--android:background="@color/navi_color"-->
-        <!--android:elevation="5dp"-->
-        <!--xmlns:tools="http://schemas.android.com/tools" />-->
+    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--app:titleTextColor="@color/bottom_navi_textColor"-->
+    <!--android:layout_alignParentTop="true"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="?android:attr/actionBarSize"-->
+    <!--android:background="@color/navi_color"-->
+    <!--android:elevation="5dp"-->
+    <!--xmlns:tools="http://schemas.android.com/tools" />-->
 
-    <include layout="@layout/toolbar" />
+    <include
+        android:id="@+id/include"
+        layout="@layout/toolbar" />
 
     <include
         layout="@layout/search_toolbar"
         android:visibility="gone" />
 
 
+    <ImageView
+        android:id="@+id/menubutton"
+        android:layout_width="27dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:elevation="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/container"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_dehaze_black_24dp" />
+
+    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"></LinearLayout>
+
+        <android.support.design.widget.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:elevation="1dp"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/nav_header_main"
+            app:menu="@menu/activity_main_drawer" />
+    </android.support.v4.widget.DrawerLayout>
+
     <LinearLayout
-        android:tag="tag"
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:layout_marginBottom="?attr/actionBarSize"
-        android:layout_marginTop="?attr/actionBarSize"/>
+        android:layout_marginTop="?attr/actionBarSize"
+        android:orientation="vertical"
+        android:tag="tag" />
 
 
     <android.support.design.widget.BottomNavigationView
-        android:elevation="8dp"
         android:id="@+id/navigation_bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/navi_color"
-        app:itemTextColor="@drawable/bottom_navi_color"
-        app:itemIconTint="@drawable/bottom_navi_color"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_weight="1"
+        android:background="@color/navi_color"
+        android:elevation="8dp"
         app:elevation="5dp"
+        app:itemIconTint="@drawable/bottom_navi_color"
+        app:itemTextColor="@drawable/bottom_navi_color"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/bottom_navi_menu"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
     </android.support.design.widget.BottomNavigationView>
+
+    <ImageView
+        android:id="@+id/optionbutton"
+        android:layout_width="27dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
+        android:elevation="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/container"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/drawer_layout"
+        app:srcCompat="@drawable/ic_more_vert_black_24dp" />
 
 </android.support.constraint.ConstraintLayout>
