--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,6 @@
 
     <color name="activity_background">#000</color>
     <color name="fragment_background">#4285f4</color>
+    <color name="time_background">#000000</color>
+    <color name="time_Text">#FFFFFF</color>
 </resources>
