firestorageにアップロード　firestoreに動画情報登録　firestoreから動画のパスを取得してそれをアプリ内で再生

--- a/app/src/main/res/layout/fragment_video_upload.xml
+++ b/app/src/main/res/layout/fragment_video_upload.xml
@@ -23,10 +23,10 @@
             android:text="Upload" />
 
         <Button
-            android:id="@+id/cancelButton"
+            android:id="@+id/catchButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cancel"/>
+            android:text="Catch"/>
     </LinearLayout>
 
 </LinearLayout>
