--- a/app/src/main/res/layout/fragment_video_upload.xml
+++ b/app/src/main/res/layout/fragment_video_upload.xml
@@ -4,17 +4,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_weight="4"
     tools:context=".VideoActivity">
 
     <VideoView
         android:id="@+id/uploadVideoPreviewView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:layout_weight="3"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="1">
+
+        <EditText
+            android:id="@+id/uploadEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:hint="動画タイトル入力欄" />
 
         <Button
             android:id="@+id/uploadButton"
