--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <!--カメラうつすとこ-->
-    <com.example.greentea.fteam.AutoFitTextureView
+    <com.example.greentea.fteam.Record.AutoFitTextureView
         android:id="@+id/texture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,12 +25,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/record" />
-        <Button
-            android:id="@+id/goPreview"
+
+        <TextView
+            android:id="@+id/countDownTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:text="プレビュー" />
+            android:text="カウントダウン予定地"/>
 
     </FrameLayout>
 
