--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -5,4 +5,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
-    tools:context="com.example.greentea.fteam.record.VideoActivity" />
+    tools:context="com.example.greentea.fteam.contribution.record.VideoActivity" />
