--- a/app/src/main/res/layout/comp_item.xml
+++ b/app/src/main/res/layout/comp_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -17,7 +18,7 @@
             android:layout_height="match_parent"
             android:text="@string/blank_comp_name"
             android:textAlignment="center"
-            android:textSize="30sp" />
+            android:textSize="@dimen/compTitle" />
     </android.support.v7.widget.CardView>
 
     <net.cachapa.expandablelayout.ExpandableLayout
@@ -32,12 +33,12 @@
                 android:id="@+id/homeRank1TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/compCardName"
+                android:textSize="@dimen/homeCompRank"
                 android:text="@string/rank1"
                 android:textStyle="bold"
                 android:textAlignment="center"
                 android:layout_marginHorizontal="18dp"
-                />
+                tools:targetApi="o" />
             <TextView
                 android:id="@+id/homeCompTime1"
                 android:layout_width="match_parent"
@@ -63,11 +64,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/rank2"
-                android:textSize="@dimen/compCardName"
+                android:textSize="@dimen/homeCompRank"
                 android:textStyle="bold"
                 android:textAlignment="center"
                 android:layout_marginHorizontal="18dp"
-                />
+                tools:targetApi="o" />
             <TextView
                 android:id="@+id/homeCompTime2"
                 android:layout_width="match_parent"
@@ -85,7 +86,7 @@
                 android:text="@string/blank_user_name"
                 android:textSize="@dimen/homeCompUserName"
                 android:textStyle="italic"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="8dp"
                 app:layout_constraintTop_toBottomOf="@id/homeCompTime2"/>
 
             <TextView
@@ -93,11 +94,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/rank3"
-                android:textSize="@dimen/compCardName"
+                android:textSize="@dimen/homeCompRank"
                 android:textStyle="bold"
                 android:textAlignment="center"
                 android:layout_marginHorizontal="18dp"
-                />
+                tools:targetApi="o" />
             <TextView
                 android:id="@+id/homeCompTime3"
                 android:layout_width="match_parent"
@@ -115,7 +116,7 @@
                 android:text="@string/blank_user_name"
                 android:textSize="@dimen/homeCompUserName"
                 android:textStyle="italic"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="8dp"
                 app:layout_constraintTop_toBottomOf="@id/homeCompTime3"/>
         </LinearLayout>
     </net.cachapa.expandablelayout.ExpandableLayout>
