--- a/app/src/main/res/layout/fragment_video_upload.xml
+++ b/app/src/main/res/layout/fragment_video_upload.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_weight="4"
-    tools:context=".record.VideoActivity">
+    tools:context=".contribution.record.VideoActivity">
 
     <VideoView
         android:id="@+id/uploadVideoPreviewView"
