--- a/app/src/main/res/layout/exist_comp_item.xml
+++ b/app/src/main/res/layout/exist_comp_item.xml
@@ -3,11 +3,15 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="8dp"
     android:id="@+id/existCompCardView">
 
     <TextView
+        android:textColor="@color/bottom_navi_textColor"
         android:id="@+id/existCompTitleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/compTitle"/>
+
 </android.support.v7.widget.CardView>
