--- a/app/src/main/res/layout/fragment_new_comp.xml
+++ b/app/src/main/res/layout/fragment_new_comp.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/newCompFragmentArea"
     android:layout_width="match_parent"
@@ -48,14 +49,41 @@
         android:text=""
         android:textAlignment="center" />
 
-
-    <ImageButton
-        android:id="@+id/camStartButton"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+    <android.support.v7.widget.CardView
+        android:id="@+id/camera_cardView"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_gravity="center"
-        android:background="@drawable/ic_video_24dp"
+        app:cardBackgroundColor="#ff0095"
         android:foreground="?android:attr/selectableItemBackground"
-        android:visibility="gone" />
+        android:visibility="gone">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageButton
+                android:id="@+id/camStartButton"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:clickable="false"
+                android:background="@drawable/ic_video_24dp"
+                android:backgroundTint="@drawable/icon_color"
+                />
+
+            <TextView
+                android:clickable="false"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="撮影"
+                android:textColor="#fff"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
