--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item android:id="@+id/navi_menu"
+        android:title="ナビメニュー"
+        android:icon="@drawable/ic_dehaze_black_24dp"
+        app:showAsAction="always"/>
+
     <item android:id="@+id/action_search"
         android:orderInCategory="0"
-        android:title="ic_search_24dp.xml"
-        android:icon="@drawable/ic_search_24dp"
+        android:title="検索"
+        android:icon="@drawable/ic_search_black_24dp"
+        android:iconTint="#fff"
         app:showAsAction="always"/>
+
 
 </menu>
