マイアカウント、押したときにHomeのViewpagerに行くようにした。 UploadFragmentのViewPagerを撤廃

--- a/app/src/main/res/menu/bottom_navi_menu.xml
+++ b/app/src/main/res/menu/bottom_navi_menu.xml
@@ -10,7 +10,7 @@
     <item
         android:id="@+id/navigation_new"
         android:title="@string/naviMenu_new"
-        android:icon="@mipmap/trophy"
+        android:icon="@drawable/ic_fiber_new_black_24dp"
         />
 
     <item
