--- a/app/src/main/res/layout/fragment_existing_comp.xml
+++ b/app/src/main/res/layout/fragment_existing_comp.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/gradientbackground"
     tools:context=".contribution.ExistingCompFragment">
 
     <android.support.v7.widget.RecyclerView
