--- a/app/src/main/res/layout/fragment_new_comp.xml
+++ b/app/src/main/res/layout/fragment_new_comp.xml
@@ -9,81 +9,81 @@
     android:orientation="vertical"
     tools:context=".contribution.NewCompFragment">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="新競技名">
+    <!--<android.support.design.widget.TextInputLayout-->
+        <!--android:id="@+id/textInputLayout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:hint="新競技名">-->
 
-        <EditText
-            android:id="@+id/newCompName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </android.support.design.widget.TextInputLayout>
+        <!--<EditText-->
+            <!--android:id="@+id/newCompName"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content" />-->
+    <!--</android.support.design.widget.TextInputLayout>-->
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="競技のルール">
+    <!--<android.support.design.widget.TextInputLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:hint="競技のルール">-->
 
-        <EditText
-            android:id="@+id/newCompRule"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textMultiLine" />
-    </android.support.design.widget.TextInputLayout>
+        <!--<EditText-->
+            <!--android:id="@+id/newCompRule"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:inputType="textMultiLine" />-->
+    <!--</android.support.design.widget.TextInputLayout>-->
 
-    <Button
-        android:id="@+id/makeCompButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:enabled="false"
-        android:text="新しく競技を作成する" />
+    <!--<Button-->
+        <!--android:id="@+id/makeCompButton"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:enabled="false"-->
+        <!--android:text="新しく競技を作成する" />-->
 
 
-    <TextView
-        android:id="@+id/submitMessage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textAlignment="center" />
+    <!--<TextView-->
+        <!--android:id="@+id/submitMessage"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text=""-->
+        <!--android:textAlignment="center" />-->
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/camera_cardView"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_gravity="center"
-        app:cardBackgroundColor="#ff0095"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:visibility="gone">
+    <!--<android.support.v7.widget.CardView-->
+        <!--android:id="@+id/camera_cardView"-->
+        <!--android:layout_width="150dp"-->
+        <!--android:layout_height="150dp"-->
+        <!--android:layout_gravity="center"-->
+        <!--app:cardBackgroundColor="#ff0095"-->
+        <!--android:foreground="?android:attr/selectableItemBackground"-->
+        <!--android:visibility="gone">-->
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <!--<LinearLayout-->
+            <!--android:orientation="vertical"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content">-->
 
-            <ImageButton
-                android:id="@+id/camStartButton"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_gravity="center"
-                android:clickable="false"
-                android:background="@drawable/ic_video_24dp"
-                android:backgroundTint="@drawable/icon_color"
-                />
+            <!--<ImageButton-->
+                <!--android:id="@+id/camStartButton"-->
+                <!--android:layout_width="60dp"-->
+                <!--android:layout_height="60dp"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:clickable="false"-->
+                <!--android:background="@drawable/ic_video_24dp"-->
+                <!--android:backgroundTint="@drawable/icon_color"-->
+                <!--/>-->
 
-            <TextView
-                android:clickable="false"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="撮影"
-                android:textColor="#fff"
-                android:textSize="20dp"
-                android:textStyle="bold" />
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+            <!--<TextView-->
+                <!--android:clickable="false"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:text="撮影"-->
+                <!--android:textColor="#fff"-->
+                <!--android:textSize="20dp"-->
+                <!--android:textStyle="bold" />-->
+        <!--</LinearLayout>-->
+    <!--</android.support.v7.widget.CardView>-->
 
 </LinearLayout>
