--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -8,25 +8,104 @@
     android:orientation="vertical"
     tools:context=".contribution.UploadFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabLayout"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/textInputLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="新競技名">
+
+        <EditText
+            android:id="@+id/newCompName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="競技のルール">
+
+        <EditText
+            android:id="@+id/newCompRule"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/navi_color"
-            app:tabSelectedTextColor="@color/colorWhite"
-            app:tabTextColor="@color/colorBlack"
-            android:elevation="4dp">
-        </android.support.design.widget.TabLayout>
+            android:inputType="textMultiLine" />
+    </android.support.design.widget.TextInputLayout>
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/compeViewPager"
+    <Button
+        android:id="@+id/makeCompButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:enabled="false"
+        android:text="新しく競技を作成する" />
+
+
+    <TextView
+        android:id="@+id/submitMessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textAlignment="center" />
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/camera_cardView"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        app:cardBackgroundColor="#ff0095"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:visibility="gone">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content">
 
-    </LinearLayout>
+            <ImageButton
+                android:id="@+id/camStartButton"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:clickable="false"
+                android:background="@drawable/ic_video_24dp"
+                android:backgroundTint="@drawable/icon_color"
+                />
+
+            <TextView
+                android:clickable="false"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="撮影"
+                android:textColor="#fff"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:orientation="vertical">-->
+
+        <!--<android.support.design.widget.TabLayout-->
+            <!--android:id="@+id/tabLayout"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@color/navi_color"-->
+            <!--app:tabSelectedTextColor="@color/colorWhite"-->
+            <!--app:tabTextColor="@color/colorBlack"-->
+            <!--android:elevation="4dp">-->
+        <!--</android.support.design.widget.TabLayout>-->
+
+        <!--<android.support.v4.view.ViewPager-->
+            <!--android:id="@+id/compeViewPager"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent" />-->
+
+    <!--</LinearLayout>-->
 </LinearLayout>
