--- a/app/src/main/res/layout/fragment_new.xml
+++ b/app/src/main/res/layout/fragment_new.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".newComp.NewFragment">
+    tools:context=".newArrivalsComp.NewArrivalsFragment">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/newCompRecyclerView"
         android:layout_width="match_parent"
